--- a/class_graph3_d_view.html
+++ b/class_graph3_d_view.html
@@ -417,7 +417,11 @@ Private Attributes</h2></td></tr>
 <pre class="fragment">*        统一管理着重建器、重切器、拾取器、骨架提取器、适量模型显示器等相关资源
 *        由VTK完成相关交互工作
 *        该类为软件的核心窗口类
-* </pre> </div><h2 class="groupheader">Member Enumeration Documentation</h2>
+* </pre> <div class="image">
+<img src="Graph3DViewer.PNG" alt="Graph3DViewer.PNG"/>
+<div class="caption">
+图形浏览器</div></div>
+ </div><h2 class="groupheader">Member Enumeration Documentation</h2>
 <a id="a85f30eb673d154c485a2c1fb1ee53153"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a85f30eb673d154c485a2c1fb1ee53153">&#9670;&nbsp;</a></span>anonymous enum</h2>
 
