--- a/class_image_view.html
+++ b/class_image_view.html
@@ -228,7 +228,11 @@ Private Attributes</h2></td></tr>
 *   按键P移动鼠标可以拾取图像坐标位置和像素值
 *   右击弹出右击菜单可以拾取种子坐标点
 *   右击菜单可以图像翻转
-* </pre> </div><h2 class="groupheader">Member Enumeration Documentation</h2>
+* </pre> <div class="image">
+<img src="ImageViewer.png" alt="ImageViewer.png"/>
+<div class="caption">
+图像浏览器</div></div>
+ </div><h2 class="groupheader">Member Enumeration Documentation</h2>
 <a id="a81f33504383543e16a4902743bea8f28"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a81f33504383543e16a4902743bea8f28">&#9670;&nbsp;</a></span>ImageViewInfo</h2>
 
