--- a/classfile_view.html
+++ b/classfile_view.html
@@ -188,7 +188,7 @@ Private Attributes</h2></td></tr>
 *        地址栏输入地址回车可直接跳转到对应目录
 *        提供文件类型筛选器
 * </pre> <div class="image">
-<img src="fileviewer.PNG" alt="fileviewer.PNG"/>
+<img src="fileviewer.png" alt="fileviewer.png"/>
 <div class="caption">
 文件浏览器</div></div>
  </div><h2 class="groupheader">Member Enumeration Documentation</h2>
